--- a/pages/learn/caos/01_04_00_iterazione_nel_piano_complesso.html
+++ b/pages/learn/caos/01_04_00_iterazione_nel_piano_complesso.html
@@ -109,17 +109,17 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
-            Ricordiamo che un numero complesso è caratterizzato da un modulo e una fase e può essere rappresentato in forma cartesiana \(z = x + jy\) oppure polare \(z = \rho ( \cos (\phi) + j\sin (\phi) ) = \rho * e^{j\alpha}\).
+            Ricordiamo che un numero complesso è caratterizzato da un modulo e una fase e può essere rappresentato in forma cartesiana \(z = x + jy\) oppure polare \(z = \rho ( \cos (\varphi) + j\sin (\varphi) ) = \rho * e^{j\alpha}\).
             <br>
             <br>
             Il prodotto tra due numeri complessi può essere risolto algebricamente attraverso la rappresentazione cartesiana oppure attraverso la rappresentazione polare.
             <br>
             <br>
-            \(z_1 = x_1 + jy_1 = \rho_1 * e^{j\phi}\); \(z_2 = x_2 + jy_2 = \rho_2 * e^{j\alpha}\);
+            \(z_1 = x_1 + jy_1 = \rho_1 * e^{j\varphi}\); \(z_2 = x_2 + jy_2 = \rho_2 * e^{j\alpha}\);
             <br>
             \(z_1 * z_2 = (x_1 + jy_1) * (x_2 + jy_2) = (x_1 * x_2 - y_1 * y_2) + j(x_1 * y_2 + y_1 * x_2)\);
             <br>
-            \(z_1 * z_2 = \rho_1 * e^{j\phi} * \rho_2 * e^{j\alpha} = \rho_1 * \rho_2 * e^{j(\phi + \alpha)}\)
+            \(z_1 * z_2 = \rho_1 * e^{j\varphi} * \rho_2 * e^{j\alpha} = \rho_1 * \rho_2 * e^{j(\varphi + \alpha)}\)
             <br>
           </p>
         </div>
