--- a/pages/learn/caos/01_04_00_iterazione_nel_piano_complesso.html
+++ b/pages/learn/caos/01_04_00_iterazione_nel_piano_complesso.html
@@ -122,7 +122,7 @@
             \(z_1 * z_2 = \rho_1 * e^{j\varphi} * \rho_2 * e^{j\alpha} = \rho_1 * \rho_2 * e^{j(\varphi + \alpha)}\)
             <br>
             <br>
-            \(z^2 = \rho^2 * e^{j2\varphi}\)
+            \(z^2 = \rho^2 * e^{j2\varphi}\); l'elevazione al quadrato implica una rotazione del modulo del vettore \(z\) sul piano complesso. Fare la somma dei due vettori vuol dire applicare la regola del parallelogramma.
           </p>
         </div>
       </div>
