--- a/pages/learn/caos/01_04_00_iterazione_nel_piano_complesso.html
+++ b/pages/learn/caos/01_04_00_iterazione_nel_piano_complesso.html
@@ -117,7 +117,7 @@
             <br>
             \(z_1 = x_1 + jy_1 = \rho_1 * e^{j\varphi}\); \(z_2 = x_2 + jy_2 = \rho_2 * e^{j\alpha}\);
             <br>
-            \(z_1 * z_2 = (x_1 + jy_1) * (x_2 + jy_2) = (x_1 * x_2 - y_1 * y_2) + j(x_1 * y_2 + y_1 * x_2)\);
+            \(z_1 \cdot z_2 = (x_1 + jy_1) * (x_2 + jy_2) = (x_1 * x_2 - y_1 * y_2) + j(x_1 * y_2 + y_1 * x_2)\);
             <br>
             \(z_1 * z_2 = \rho_1 * e^{j\varphi} * \rho_2 * e^{j\alpha} = \rho_1 * \rho_2 * e^{j(\varphi + \alpha)}\)
             <br>
