--- a/pages/learn/caos/01_03_00_equazione_logistica.html
+++ b/pages/learn/caos/01_03_00_equazione_logistica.html
@@ -121,11 +121,11 @@
             <br>
             <br>
             L’equazione logistica prevede quindi la popolazione alla generazione \(n+1\) in base alla conoscenza della popolazione alla generazione \(n\). L’equazione è:
-            $$P_n + 1 = c * P_n * (1 - P_n)$$
+            $$P_n + 1 = c \cdot P_n \cdot (1 - P_n)$$
             \(c\) è una costante che dipende dai fattori ecologici, come la temperatura dell’ambiente o/e la quantità di risorse energetiche.
             \(c\) assume solitamente valori da 0 a 4.
             L’equazione fa parte delle funzioni quadratiche, con la \(x \in [0…1]\):
-            $$F(x) = c * x * (1 - x) = cx - cx^2$$
+            $$F(x) = c \cdot x \cdot (1 - x) = cx - cx^2$$
           </p>
         </div>
       </div>
