--- a/pages/learn/caos/01_04_00_iterazione_nel_piano_complesso.html
+++ b/pages/learn/caos/01_04_00_iterazione_nel_piano_complesso.html
@@ -143,6 +143,23 @@
     </div>
   </section>
 
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <p class="mbr-text mbr-fonts-style display-7">
+            È interessante notare che facendo il modulo di  avremo un valore piú piccolo rispetto al modulo di z più il modulo di w.
+            <br>
+            Disuguaglianza triangolare (Disuguaglianza di Cauchy-Schwartz):
+            <br>
+            \(|z + w| \leq |z| + |w|\)
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Prev/Next-->
   <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
     <div class="container">
