--- a/pages/learn/caos/01_04_00_iterazione_nel_piano_complesso.html
+++ b/pages/learn/caos/01_04_00_iterazione_nel_piano_complesso.html
@@ -154,6 +154,12 @@
             Disuguaglianza triangolare (Disuguaglianza di Cauchy-Schwartz):
             <br>
             \(|z + w| \leq |z| + |w|\)
+            <br>
+            <br>
+            Consideriamo l’iterazione della funzione quadratica \(T(z) = z^2 = (x + jy)^2 = (x^2 - y^2) + j(2xy)\)
+            <br>
+            <br>
+            Proviamo ad iterare la funzione complessa su un punto iniziale \(\in |x| \leq 2 ; |y| \leq 2\)
           </p>
         </div>
       </div>
