--- a/pages/learn/caos/01_04_00_iterazione_nel_piano_complesso.html
+++ b/pages/learn/caos/01_04_00_iterazione_nel_piano_complesso.html
@@ -151,9 +151,7 @@
           <p class="mbr-text mbr-fonts-style display-7">
             È interessante notare che facendo il modulo di  avremo un valore piú piccolo rispetto al modulo di z più il modulo di w.
             <br>
-            Disuguaglianza triangolare (Disuguaglianza di Cauchy-Schwartz):
-            <br>
-            \(|z + w| \leq |z| + |w|\)
+            <b>Disuguaglianza triangolare (Disuguaglianza di Cauchy-Schwartz):</b> \(|z + w| \leq |z| + |w|\)
             <br>
             <br>
             Consideriamo l’iterazione della funzione quadratica \(T(z) = z^2 = (x + jy)^2 = (x^2 - y^2) + j(2xy)\)
