--- a/pages/learn/caos/01_04_00_iterazione_nel_piano_complesso.html
+++ b/pages/learn/caos/01_04_00_iterazione_nel_piano_complesso.html
@@ -158,6 +158,9 @@
             <br>
             <br>
             Proviamo ad iterare la funzione complessa su un punto iniziale \(\in |x| \leq 2 ; |y| \leq 2\)
+            <br>
+            <br>
+            Il risultato è che tutti i punti z il cui modulo è \(< 1\) convergono al punto fisso 0, mentre se \(|x + jy| > 1\) i punti tendano all’infinito.
           </p>
         </div>
       </div>
