--- a/pages/learn/caos/01_04_00_iterazione_nel_piano_complesso.html
+++ b/pages/learn/caos/01_04_00_iterazione_nel_piano_complesso.html
@@ -149,8 +149,7 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
-            È interessante notare che facendo il modulo di  avremo un valore piú piccolo rispetto al modulo di z più il modulo di w.
-            <br>
+            È interessante notare che facendo il modulo di  avremo un valore piú piccolo rispetto al modulo di \(z\) più il modulo di \(w\).
             <b>Disuguaglianza triangolare (Disuguaglianza di Cauchy-Schwartz):</b> \(|z + w| \leq |z| + |w|\)
             <br>
             <br>
