--- a/pages/learn/caos/01_04_00_iterazione_nel_piano_complesso.html
+++ b/pages/learn/caos/01_04_00_iterazione_nel_piano_complesso.html
@@ -162,7 +162,9 @@
             Il risultato è che tutti i punti \(z\) il cui modulo è \(< 1\) convergono al punto fisso 0, mentre se \(|x + jy| > 1\) i punti tendano all’infinito.
             <br>
             <br>
-            Cosa succede quando \(|x + jy| = 1\)? Questi punti ∈ alla circonferenza unitaria nel piano di Gauss. L’insieme di questi punti è detto <a href="https://www.gabrielavelitch.com/pages/learn/caos/01_04_01_insiemi_di_julia.html" target="_blank"><b>insieme di Julia</b></a>.
+            Cosa succede quando \(|x + jy| = 1\)? Questi punti ∈ alla circonferenza unitaria nel piano di Gauss.
+            Tutti questi punti saranno quelli che appartengono alla circonferenza di raggio 1.
+            L’insieme di questi punti è detto <a href="https://www.gabrielavelitch.com/pages/learn/caos/01_04_01_insiemi_di_julia.html" target="_blank"><b>insieme di Julia</b></a>.
             <br>
             <br>
             Si può dimostrare che l'orbita di un punto \(\in\) all'insieme di Julia, rimane per sempre nell'insieme di Julia.
