--- a/pages/learn/caos/01_04_01_insiemi_di_julia.html
+++ b/pages/learn/caos/01_04_01_insiemi_di_julia.html
@@ -140,8 +140,22 @@
       <div class="row justify-content-center">
         <div class="col-12 col-lg-5">
           <div class="image-wrapper">
-            <img src="https://www.gabrielavelitch.com/img/caos/22.webp" alt="www.gabrielavelitch.com">
-            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 22 - \(\pi je^z\)</p>
+            <img src="https://www.gabrielavelitch.com/img/caos/23.webp" alt="www.gabrielavelitch.com">
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 23 - \(z^2 + 0.360284 + 0.100376j\)</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Image-->
+  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-5">
+          <div class="image-wrapper">
+            <img src="https://www.gabrielavelitch.com/img/caos/24.webp" alt="www.gabrielavelitch.com">
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 24 - \(\pi je^z\)</p>
           </div>
         </div>
       </div>
