--- a/pages/learn/caos/01_04_00_iterazione_nel_piano_complesso.html
+++ b/pages/learn/caos/01_04_00_iterazione_nel_piano_complesso.html
@@ -45,9 +45,10 @@
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/mobirise/css/mbr-additional.css" type="text/css">
 
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-  <script id="MathJax-script" async
-          src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
   </script>
+
+
 
   <!-- include internals -->
   <script>
@@ -159,15 +160,15 @@
             Proviamo ad iterare la funzione complessa su un punto iniziale \(\in |x| \leq 2 ; |y| \leq 2\)
             <br>
             <br>
-            Il risultato è che tutti i punti \(z\) il cui modulo è \(< 1\) convergono al punto fisso 0, mentre se \(|x + jy| > 1\) i punti tendano all’infinito.
-            <br>
-            <br>
-            Cosa succede quando \(|x + jy| = 1\)? Questi punti ∈ alla circonferenza unitaria nel piano di Gauss.
-            Tutti questi punti saranno quelli che appartengono alla circonferenza di raggio 1.
-            L’insieme di questi punti è detto <a href="https://www.gabrielavelitch.com/pages/learn/caos/01_04_01_insiemi_di_julia.html" target="_blank"><b>insieme di Julia</b></a>.
-            <br>
-            <br>
-            Si può dimostrare che l'orbita di un punto \(\in\) all'insieme di Julia, rimane per sempre nell'insieme di Julia.
+            Il risultato è che tutti i punti \(z\) il cui modulo è \(< 1\) convergono al punto fisso 0, mentre se \(|x + jy|> 1\) i punti tendano all’infinito.
+              <br>
+              <br>
+              Cosa succede quando \(|x + jy| = 1\)? Questi punti ∈ alla circonferenza unitaria nel piano di Gauss.
+              Tutti questi punti saranno quelli che appartengono alla circonferenza di raggio 1.
+              L’insieme di questi punti è detto <a href="https://www.gabrielavelitch.com/pages/learn/caos/01_04_01_insiemi_di_julia.html" target="_blank"><b>insieme di Julia</b></a>.
+              <br>
+              <br>
+              Si può dimostrare che l'orbita di un punto \(\in\) all'insieme di Julia, rimane per sempre nell'insieme di Julia.
           </p>
         </div>
       </div>
@@ -209,7 +210,7 @@
     <script src="https://www.gabrielavelitch.com/assets/dropdown/js/navbar-dropdown.js"></script>
     <script src="https://www.gabrielavelitch.com/assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>
     <script src="https://www.gabrielavelitch.com/assets/theme/js/script.js"></script>
-      includeHTML();
+    includeHTML();
     </script>
 
 </body>
