--- a/pages/learn/caos/01_04_01_insiemi_di_julia.html
+++ b/pages/learn/caos/01_04_01_insiemi_di_julia.html
@@ -45,8 +45,8 @@
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/mobirise/css/mbr-additional.css" type="text/css">
 
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-  <script id="MathJax-script" async
-          src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+  </script>
 
   <!-- include internals -->
   <script>
@@ -110,7 +110,7 @@
           <p class="mbr-text mbr-fonts-style display-7">
             L’insieme di Julia di un polinomio complesso (l’esempio precedente era un polinomio di ordine 2) è il contorno dell’insieme dei punti che fuggono all’infinito.
             Potremo rappresentare graficamente l’insieme di Julia di una funzione complessa studiando i punti di tale insieme edi punti arbitrariamente vicini alla frontiera, le cui orbite o fuggono all’infinito o collassano al punto 0;
-            Associamo inoltre a differenti colori la velocità di “fuga” verso infinito delle differenti orbite.
+            Associamo inoltre a differenti colori la velocità di “fuga” verso infinito delle differenti orbite. Nell'insieme di Julia la \(c\) è fissa e la \(z\) variabile.
             <br>
             <br>
             Insiemi di Julia di alcune funzioni complesse:
