--- a/pages/learn/caos/01_04_01_insiemi_di_julia.html
+++ b/pages/learn/caos/01_04_01_insiemi_di_julia.html
@@ -127,7 +127,7 @@
         <div class="col-12 col-lg-5">
           <div class="image-wrapper">
             <img src="https://www.gabrielavelitch.com/img/caos/22.webp" alt="www.gabrielavelitch.com">
-            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 22 - \(z^2 - 1\)</p>
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 22 <br> \(z^2 - 1\)</p>
           </div>
         </div>
       </div>
@@ -141,7 +141,7 @@
         <div class="col-12 col-lg-5">
           <div class="image-wrapper">
             <img src="https://www.gabrielavelitch.com/img/caos/23.webp" alt="www.gabrielavelitch.com">
-            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 23 - \(z^2 + 0.360284 + 0.100376j\)</p>
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 23 <br> \(z^2 + 0.360284 + 0.100376j\)</p>
           </div>
         </div>
       </div>
@@ -155,7 +155,7 @@
         <div class="col-12 col-lg-5">
           <div class="image-wrapper">
             <img src="https://www.gabrielavelitch.com/img/caos/24.webp" alt="www.gabrielavelitch.com">
-            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 24 - \(\pi je^z\)</p>
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 24 <br> \(\pi je^z\)</p>
           </div>
         </div>
       </div>
