--- a/pages/learn/caos/01_04_02_insieme_di_mandlbrot.html
+++ b/pages/learn/caos/01_04_02_insieme_di_mandlbrot.html
@@ -109,13 +109,15 @@
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
             Per generare l’insieme di Mandelbrot è sufficiente analizzare l’orbita del punto 0 sotto l’azione della funzione \(Q_c = z^2 + c\) per ogni valore di \(c\).
-
-            L’orbita che principia con il punto 0 viene chiamata orbita critica. Per tale punto infatti \(Q_c = c\). Non esiste un altro punto nel piano tale che 𝑧↑2 +𝑐 =c
-
-            L’insieme di Mandelbrot è l’insieme dei valori di c per cui l’orbita critica di 𝑄↓𝑐  non tende all’infinito.
-
-            L’insieme di Mandelbrot è una figura sul piano delle c e non sul piano delle z che è invece l’ambiente degli <a href="https://www.gabrielavelitch.com/pages/learn/caos/01_04_01_insiemi_di_julia.html" target="_blank"><b>insiemi di
-                Julia</b></a>.
+            <br>
+            <br>
+            L’orbita che principia con il punto 0 viene chiamata orbita critica. Per tale punto infatti \(Q_c = c\). Non esiste un altro punto nel piano tale che \(z^2 + c = c\).
+            <br>
+            <br>
+            L’insieme di Mandelbrot è l’insieme dei valori di \(c\) per cui l’orbita critica di \(Q_c\) non tende all’infinito.
+            <br>
+            <br>
+            L’insieme di Mandelbrot è una figura sul piano delle \(c\) e non sul piano delle \(z\) che è invece l’ambiente degli <a href="https://www.gabrielavelitch.com/pages/learn/caos/01_04_01_insiemi_di_julia.html" target="_blank"><b>insiemi di Julia</b></a>.
           </p>
         </div>
       </div>
