--- a/pages/learn/caos/01_04_02_insieme_di_mandlbrot.html
+++ b/pages/learn/caos/01_04_02_insieme_di_mandlbrot.html
@@ -118,6 +118,7 @@
             <br>
             <br>
             L’insieme di Mandelbrot è una figura sul piano delle \(c\) e non sul piano delle \(z\) che è invece l’ambiente degli <a href="https://www.gabrielavelitch.com/pages/learn/caos/01_04_01_insiemi_di_julia.html" target="_blank"><b>insiemi di Julia</b></a>.
+            L'orbita \(z\) rimane fissa e la \(c\) invece è variabile.
           </p>
         </div>
       </div>
