--- a/pages/learn/caos/01_04_03_frattali.html
+++ b/pages/learn/caos/01_04_03_frattali.html
@@ -109,7 +109,7 @@
             <li>E’ un oggetto auto-similare</li>
             <li>Ha una dimensione frazionaria</li>
           </ol>
-          Sia gli insiemi di Julia che l’insieme di Mandelbrot godono di queste due proprietà.
+          Sia gli <a href="https://www.gabrielavelitch.com/pages/learn/caos/01_04_01_insiemi_di_julia.html" target="_blank"><b>insiemi di Julia</b></a> che <a href="https://www.gabrielavelitch.com/pages/learn/caos/01_04_02_insieme_di_mandlbrot.html" target="_blank"><b>l'insieme di Mandlbrot</b></a> godono di queste due proprietà.
           </p>
         </div>
       </div>
