--- a/pages/learn/caos/01_04_04_triangolo_di_sierpinski.html
+++ b/pages/learn/caos/01_04_04_triangolo_di_sierpinski.html
@@ -86,14 +86,13 @@
 
 
   <!-- Text-->
-
-
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
       <div class="container">
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-
+                    E’ generato da una successione infinita di “rimozioni”.
+                    Si inizia con un triangolo equilatero pieno e dal suo interno si rimuove il triangolo i cui vertici sono a \(L / 2\) rispetto alle lunghezze dei lati del triangolo di partenza.
                   </p>
                 </div>
             </div>
