--- a/pages/learn/caos/01_04_04_triangolo_di_sierpinski.html
+++ b/pages/learn/caos/01_04_04_triangolo_di_sierpinski.html
@@ -40,7 +40,7 @@
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
   </script>
 
-  
+
   <!-- include internals -->
   <script>
   function includeHTML() {
@@ -105,6 +105,61 @@
         </div>
     </section>
 
+    <!-- Image-->
+    <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+      <div class="container-fluid">
+        <div class="row justify-content-center">
+          <div class="col-12 col-lg-5">
+            <div class="image-wrapper">
+              <img src="https://www.gabrielavelitch.com/img/caos/25.webp" alt="www.gabrielavelitch.com">
+              <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 25</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Image-->
+    <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+      <div class="container-fluid">
+        <div class="row justify-content-center">
+          <div class="col-12 col-lg-5">
+            <div class="image-wrapper">
+              <img src="https://www.gabrielavelitch.com/img/caos/26.webp" alt="www.gabrielavelitch.com">
+              <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 26</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Image-->
+    <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+      <div class="container-fluid">
+        <div class="row justify-content-center">
+          <div class="col-12 col-lg-5">
+            <div class="image-wrapper">
+              <img src="https://www.gabrielavelitch.com/img/caos/27.webp" alt="www.gabrielavelitch.com">
+              <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 27</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Image-->
+    <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+      <div class="container-fluid">
+        <div class="row justify-content-center">
+          <div class="col-12 col-lg-5">
+            <div class="image-wrapper">
+              <img src="https://www.gabrielavelitch.com/img/caos/28.webp" alt="www.gabrielavelitch.com">
+              <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 28</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
 
 <!-- Prev/Next-->
