--- a/pages/learn/caos/01_04_04_triangolo_di_sierpinski.html
+++ b/pages/learn/caos/01_04_04_triangolo_di_sierpinski.html
@@ -119,6 +119,19 @@
       </div>
     </section>
 
+    <!-- Text-->
+    <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-12 col-lg-8">
+                    <p class="mbr-text mbr-fonts-style display-7">
+                      Successivamente si ripete lo stesso procedimento ai tre triangoli che si generano.
+                    </p>
+                  </div>
+              </div>
+          </div>
+      </section>
+
     <!-- Image-->
     <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
       <div class="container-fluid">
@@ -133,6 +146,19 @@
       </div>
     </section>
 
+    <!-- Text-->
+    <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-12 col-lg-8">
+                    <p class="mbr-text mbr-fonts-style display-7">
+                      E così via, con la successiva rimozione.
+                    </p>
+                  </div>
+              </div>
+          </div>
+      </section>
+
     <!-- Image-->
     <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
       <div class="container-fluid">
@@ -146,6 +172,20 @@
         </div>
       </div>
     </section>
+
+    <!-- Text-->
+    <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-12 col-lg-8">
+                    <p class="mbr-text mbr-fonts-style display-7">
+                      E’ una figura autosimilare? Basta prendere una porzione e confrontarla con la figura originale.
+                      L’area del triangolo di Sierpinski è pari a 0 ma il perimetro è finito.
+                    </p>
+                  </div>
+              </div>
+          </div>
+      </section>
 
     <!-- Image-->
     <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
@@ -167,7 +207,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/01_04_03_frattali.html">&lt; Previous</a>
                     <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
                     <br>
                     <br>
