--- a/pages/learn/caos.html
+++ b/pages/learn/caos.html
@@ -118,12 +118,15 @@
               <ul>
                 <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_03_01_diagramma_delle_orbite.html" target="_blank"><b>01.03.01. Diagramma delle Orbite</b></a></li>
               </ul>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_04_00_iterazione_nel_piano_complesso.html" target="_blank"><b>01.04. Iterazione nel Piano Complesso</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_04_00_00_iterazione_nel_piano_complesso.html" target="_blank"><b>01.04. Iterazione nel Piano Complesso</b></a></li>
               <ul>
-                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_04_01_insiemi_di_julia.html" target="_blank"><b>01.04.01. Insiemi di Julia</b></a></li>
-                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_04_02_insieme_di_mandlbrot.html" target="_blank"><b>01.04.02. Insieme di Mandlbrot</b></a></li>
-                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_04_03_frattali.html" target="_blank"><b>01.04.03. Frattali</b></a></li>
-                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_04_04_triangolo_di_sierpinski.html" target="_blank"><b>01.04.04. Triangolo di Sierpinski</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_04_01_00_insiemi_di_julia.html" target="_blank"><b>01.04.01. Insiemi di Julia</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_04_02_00_insieme_di_mandlbrot.html" target="_blank"><b>01.04.02. Insieme di Mandlbrot</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_04_03_00_frattali.html" target="_blank"><b>01.04.03. Frattali</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_04_04_00_triangolo_di_sierpinski.html" target="_blank"><b>01.04.04. Triangolo di Sierpinski</b></a></li>
+                <ul>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_04_04_01_dimensioni_frazionarie.html" target="_blank"><b>01.04.04.01. Dimensioni Frazionarie</b></a></li>
+                </ul>
                 <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_04_05_fiocco_di_neve_di_kock.html" target="_blank"><b>01.04.05. Fiocco di Neve di Kock</b></a></li>
               </ul>
             </ul>
