--- a/pages/learn/caos/01_04_04_01_dimensioni_frazionarie.html
+++ b/pages/learn/caos/01_04_04_01_dimensioni_frazionarie.html
@@ -116,9 +116,21 @@
             Ma il <a href="https://www.gabrielavelitch.com/pages/learn/caos/01_04_04_00_triangolo_di_sierpinski.html" target="_blank"><b>Triangolo di Sierpinski</b></a>, che dimensione ha?
             <br>
             <br>
-            Un segmento è una figura autosimilare poiché può essere divisa per \(n^1\) parti uguali, ognuna di grandezza \(1/n\) rispetto all’originale e con la proprietà di tornare identica all’originale se la parte viene moltiplicata per \(n\) cioè ingrandita di un fattore \(n\).
+            Un segmento è una figura autosimilare poiché può essere divisa per \(n^1\) parti uguali, ognuna di grandezza \(1/n\) rispetto all’originale e con la proprietà di tornare identica all’originale se la parte viene moltiplicata per \(n\) cioè
+            ingrandita di un fattore \(n\).
             Un quadrato potrà essere suddiviso in \(n^2\) quadratini dati dalla suddivisione dei lati rispettivamente in \(1/n\) parti. Analogamente per un cubo si avranno \(n^3\) cubetti.
             La dimensione allora può essere dedotta dall’esponente di \(n\).
+            <br>
+            <br>
+            Nei frattali la dimensione viene espressa calcolando il logaritmo del numero dei pezzi in cui l’oggetto è stato suddiviso, rispetto al logaritmo del fattore di ingrandimento.
+            <br>
+            <br>
+            Iniziamo esprimendo il logaritmo del numero dei pezzi:
+          <ul>
+            <li>Per un segmento si ha \(\log (numero pezzi) = \log (n^1) = 1 \cdot \log (n)\)</li>
+            <li>Per un segmento si ha \(\log (numero pezzi) = \log (n^2) = 2 \cdot \log (n)\)</li>
+            <li>Per un segmento si ha \(\log (numero pezzi) = \log (n^3) = 3 \cdot \log (n)\)</li>
+          </ul>
           </p>
         </div>
       </div>
