--- a/pages/learn/caos/01_04_04_01_dimensioni_frazionarie.html
+++ b/pages/learn/caos/01_04_04_01_dimensioni_frazionarie.html
@@ -47,7 +47,7 @@
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
   </script>
-  
+
 
   <!-- include internals -->
   <script>
@@ -133,9 +133,11 @@
             Iniziamo esprimendo il logaritmo del numero dei pezzi:
           <ul>
             <li>Per un segmento si ha \(\log (numero pezzi) = \log (n^1) = 1 \cdot \log (n)\)</li>
-            <li>Per un segmento si ha \(\log (numero pezzi) = \log (n^2) = 2 \cdot \log (n)\)</li>
-            <li>Per un segmento si ha \(\log (numero pezzi) = \log (n^3) = 3 \cdot \log (n)\)</li>
+            <li>Per un quadrato si ha \(\log (numero pezzi) = \log (n^2) = 2 \cdot \log (n)\)</li>
+            <li>Per un cubo si ha \(\log (numero pezzi) = \log (n^3) = 3 \cdot \log (n)\)</li>
           </ul>
+          <p class="mbr-text mbr-fonts-style display-7">
+            Dividiamo il risultato per il logaritmo delle divisioni
           </p>
         </div>
       </div>
