--- a/pages/learn/caos/01_04_04_01_dimensioni_frazionarie.html
+++ b/pages/learn/caos/01_04_04_01_dimensioni_frazionarie.html
@@ -137,7 +137,11 @@
             <li>Per un cubo si ha \(\log (numero pezzi) = \log (n^3) = 3 \cdot \log (n)\)</li>
           </ul>
           <p class="mbr-text mbr-fonts-style display-7">
-            Dividiamo il risultato per il logaritmo delle divisioni
+            Dividiamo il risultato per il logaritmo delle divisioni:
+            <ul>
+              <li>Per un segmento si ha \(\frac{\log (numero pezzi)}{\log (ingrandimento)} = \frac{\log (n^1)}{\log (n)} = \frac{1 \cdot \log (n)}{\log (n)} = 1\)</li>
+              <li>Per un quadrato si ha \(\log (numero pezzi) = \log (n^2) = 2 \cdot \log (n)\)</li>
+            </ul>
           </p>
         </div>
       </div>
