--- a/pages/learn/caos/01_04_04_01_dimensioni_frazionarie.html
+++ b/pages/learn/caos/01_04_04_01_dimensioni_frazionarie.html
@@ -139,8 +139,9 @@
           <p class="mbr-text mbr-fonts-style display-7">
             Dividiamo il risultato per il logaritmo delle divisioni:
             <ul>
-              <li>Per un segmento si ha \(\frac{\log (numero pezzi)}{\log (ingrandimento)} = \frac{\log (n^1)}{\log (n)} = \frac{1 \cdot \log (n)}{\log (n)} = 1\)</li>
-              <li>Per un quadrato si ha \(\log (numero pezzi) = \log (n^2) = 2 \cdot \log (n)\)</li>
+              <li>Per un segmento si ha \(D = \frac{\log (numero pezzi)}{\log (ingrandimento)} = \frac{\log (n^1)}{\log (n)} = \frac{1 \cdot \log (n)}{\log (n)} = 1\)</li>
+              <li>Per un quadrato si ha \(D = \frac{\log (numero pezzi)}{\log (ingrandimento)} = \frac{\log (n^2)}{\log (n)} = \frac{2 \cdot \log (n)}{\log (n)} = 2\)</li>
+              <li>Per un cubo si ha \(D = \frac{\log (numero pezzi)}{\log (ingrandimento)} = \frac{\log (n^3)}{\log (n)} = \frac{3 \cdot \log (n)}{\log (n)} = 3\)</li>
             </ul>
           </p>
         </div>
