--- a/pages/learn/caos/01_04_04_01_dimensioni_frazionarie.html
+++ b/pages/learn/caos/01_04_04_01_dimensioni_frazionarie.html
@@ -144,7 +144,7 @@
               <li>Per un cubo si ha \(D = \frac{\log (\text{numero pezzi}){\log (ingrandimento)} = \frac{\log (n^3)}{\log (n)} = \frac{3 \cdot \log (n)}{\log (n)} = 3\)</li>
             </ul>
             <p class="mbr-text mbr-fonts-style display-7">
-
+              Per il <a href="https://www.gabrielavelitch.com/pages/learn/caos/01_04_04_00_triangolo_di_sierpinski.html" target="_blank"><b>Triangolo di Sierpinski</b></a> si ha che l’angolo in basso a sinistra, se amplificato (ingrandito) di un fattore 2 riproduce il triangolo di partenza.
           </p>
         </div>
       </div>
