--- a/pages/learn/caos/01_04_04_01_dimensioni_frazionarie.html
+++ b/pages/learn/caos/01_04_04_01_dimensioni_frazionarie.html
@@ -138,20 +138,47 @@
           </ul>
           <p class="mbr-text mbr-fonts-style display-7">
             Dividiamo il risultato per il logaritmo delle divisioni:
-            <ul>
-              <li>Per un segmento si ha \(D = \frac{\log (\text{numero pezzi})}{\log (ingrandimento)} = \frac{\log (n^1)}{\log (n)} = \frac{1 \cdot \log (n)}{\log (n)} = 1\)</li>
-              <li>Per un quadrato si ha \(D = \frac{\log (\text{numero pezzi})}{\log (ingrandimento)} = \frac{\log (n^2)}{\log (n)} = \frac{2 \cdot \log (n)}{\log (n)} = 2\)</li>
-              <li>Per un cubo si ha \(D = \frac{\log (\text{numero pezzi}){\log (ingrandimento)} = \frac{\log (n^3)}{\log (n)} = \frac{3 \cdot \log (n)}{\log (n)} = 3\)</li>
-            </ul>
-            <p class="mbr-text mbr-fonts-style display-7">
-              Per il <a href="https://www.gabrielavelitch.com/pages/learn/caos/01_04_04_00_triangolo_di_sierpinski.html" target="_blank"><b>Triangolo di Sierpinski</b></a> si ha che l’angolo in basso a sinistra, se amplificato (ingrandito) di un fattore 2 riproduce il triangolo di partenza.
+          <ul>
+            <li>Per un segmento si ha \(D = \frac{\log (\text{numero pezzi})}{\log (ingrandimento)} = \frac{\log (n^1)}{\log (n)} = \frac{1 \cdot \log (n)}{\log (n)} = 1\)</li>
+            <li>Per un quadrato si ha \(D = \frac{\log (\text{numero pezzi})}{\log (ingrandimento)} = \frac{\log (n^2)}{\log (n)} = \frac{2 \cdot \log (n)}{\log (n)} = 2\)</li>
+            <li>Per un cubo si ha \(D = \frac{\log (\text{numero pezzi}){\log (ingrandimento)} = \frac{\log (n^3)}{\log (n)} = \frac{3 \cdot \log (n)}{\log (n)} = 3\)</li>
+          </ul>
+          <p class="mbr-text mbr-fonts-style display-7">
+            Per il <a href="https://www.gabrielavelitch.com/pages/learn/caos/01_04_04_00_triangolo_di_sierpinski.html" target="_blank"><b>Triangolo di Sierpinski</b></a> si ha che l’angolo in basso a sinistra, se amplificato (ingrandito) di un
+            fattore 2 riproduce il triangolo di partenza.
           </p>
         </div>
       </div>
     </div>
   </section>
 
+  <!-- Image-->
+  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-5">
+          <div class="image-wrapper">
+            <img src="https://www.gabrielavelitch.com/img/caos/25.webp" alt="www.gabrielavelitch.com">
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 25</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <p class="mbr-text mbr-fonts-style display-7">
+            I pezzi in cui è stato diviso il triangolo sono 3.
+            Quindi \(D = \frac{\log (\text{numero pezzi})}{\log (ingrandimento)} = \frac{\log (3)}{\log (2)} = 1.585\) cioè una dimensione frazionaria compresa tra 1 (linea) e 2 (figura piana).
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Prev/Next-->
   <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
