--- a/pages/learn/caos/01_04_04_01_dimensioni_frazionarie.html
+++ b/pages/learn/caos/01_04_04_01_dimensioni_frazionarie.html
@@ -174,6 +174,8 @@
           <p class="mbr-text mbr-fonts-style display-7">
             I pezzi in cui è stato diviso il triangolo sono 3.
             Quindi \(D = \frac{\log (\text{numero pezzi})}{\log (ingrandimento)} = \frac{\log (3)}{\log (2)} = 1.585\) cioè una dimensione frazionaria compresa tra 1 (linea) e 2 (figura piana).
+            Non avremo quindi una dimensione come un numero intero, ma siamo a metà strada tra una figura a due dimensioni ed una ad una dimensione.
+            La dimensione non è un numero intero ma è un numero frazionario (da ciò frattali).
           </p>
         </div>
       </div>
