--- a/pages/learn/caos/01_04_04_01_dimensioni_frazionarie.html
+++ b/pages/learn/caos/01_04_04_01_dimensioni_frazionarie.html
@@ -188,7 +188,7 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-10">
           <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/01_04_04_00_triangolo_di_sierpinski.html">&lt; Previous</a>
-            <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
+            <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/01_04_05_fiocco_di_neve_di_kock.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
           </div>
           <br>
           <br>
