--- a/pages/learn/caos/01_04_04_01_dimensioni_frazionarie.html
+++ b/pages/learn/caos/01_04_04_01_dimensioni_frazionarie.html
@@ -141,7 +141,7 @@
           <ul>
             <li>Per un segmento si ha \(D = \frac{\log (\text{numero pezzi})}{\log (ingrandimento)} = \frac{\log (n^1)}{\log (n)} = \frac{1 \cdot \log (n)}{\log (n)} = 1\)</li>
             <li>Per un quadrato si ha \(D = \frac{\log (\text{numero pezzi})}{\log (ingrandimento)} = \frac{\log (n^2)}{\log (n)} = \frac{2 \cdot \log (n)}{\log (n)} = 2\)</li>
-            <li>Per un cubo si ha \(D = \frac{\log (\text{numero pezzi}){\log (ingrandimento)} = \frac{\log (n^3)}{\log (n)} = \frac{3 \cdot \log (n)}{\log (n)} = 3\)</li>
+            <li>Per un cubo si ha \(D = \frac{\log (\text{numero pezzi})}{\log (ingrandimento)} = \frac{\log (n^3)}{\log (n)} = \frac{3 \cdot \log (n)}{\log (n)} = 3\)</li>
           </ul>
           <p class="mbr-text mbr-fonts-style display-7">
             Per il <a href="https://www.gabrielavelitch.com/pages/learn/caos/01_04_04_00_triangolo_di_sierpinski.html" target="_blank"><b>Triangolo di Sierpinski</b></a> si ha che l’angolo in basso a sinistra, se amplificato (ingrandito) di un
