--- a/pages/learn/caos.html
+++ b/pages/learn/caos.html
@@ -139,27 +139,6 @@
   </section>
 
 
-
-
-  <!-- Downloads-->
-
-  <section data-bs-version="5.1" class="content5 cid-sZjlSBcUZU" id="content5-29">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-md-12 col-lg-10">
-          <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5">
-            <strong>DOWNLOADS</strong>
-          </h4>
-          <p class="mbr-text mbr-fonts-style display-7">
-          <ul>
-
-          </ul>
-          </p>
-        </div>
-      </div>
-    </div>
-  </section>
-
   <!-- Web-->
 
   <section data-bs-version="5.1" class="content5 cid-sZjlSBcUZU" id="content5-29">
@@ -172,6 +151,7 @@
           <p class="mbr-text mbr-fonts-style display-7">
           <ul>
             <li><a href="https://www.youtube.com/watch?v=_b4wltMg7As" target="_blank"><b>Video Documentario - Caos, ordine e memoria associativa</b></a></li>
+            <li><a href="https://docs.python.org/3/library/turtle.html" target="_blank"><b>Python library - Turtle graphics</b></a></li>
           </ul>
           <br><br>
           </p>
