--- a/pages/learn/caos/01_04_05_fiocco_di_neve_di_kock.html
+++ b/pages/learn/caos/01_04_05_fiocco_di_neve_di_kock.html
@@ -138,7 +138,7 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
-            \(D = \frac{\log (\text{numero pezzi})}{\log (\text{numero divisioni})} = \frac{\log (4)}{\log (3)} = 1.262\)
+            $$D = \frac{\log (\text{numero pezzi})}{\log (\text{numero divisioni})} = \frac{\log (4)}{\log (3)} = 1.262$$
             <br>
             <br>
             Il fiocco di neve di Kock ha area limitata ma perimetro infinito.
