--- a/pages/learn/caos.html
+++ b/pages/learn/caos.html
@@ -131,8 +131,12 @@
               </ul>
             </ul>
             <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_00_caos_stocastico.html" target="_blank"><b>02. Caos Stocastico</b></a></li>
-          </ul>
-          </p>
+            <ul>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_01_elementi_di_calcolo_delle_probabilità.html" target="_blank"><b>02.01. Elementi di Calcolo delle Probabilità</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_02_probabilità_condizionata.html" target="_blank"><b>02.02. Probabilità Condizionata</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_03_indipendenza.html" target="_blank"><b>02.03. Indipendenza</b></a></li>
+            </ul>
+            </p>
         </div>
       </div>
     </div>
