--- a/pages/learn/caos.html
+++ b/pages/learn/caos.html
@@ -135,6 +135,8 @@
               <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_01_elementi_di_calcolo_delle_probabilità.html" target="_blank"><b>02.01. Elementi di Calcolo delle Probabilità</b></a></li>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_02_probabilità_condizionata.html" target="_blank"><b>02.02. Probabilità Condizionata</b></a></li>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_03_indipendenza.html" target="_blank"><b>02.03. Indipendenza</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_04_variabili_aleatorie.html" target="_blank"><b>02.04. Variabili Aleatorie</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.05. Densità di Probabilità</b></a></li>
             </ul>
             </p>
         </div>
