--- a/pages/learn/caos.html
+++ b/pages/learn/caos.html
@@ -137,6 +137,25 @@
               <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_03_indipendenza.html" target="_blank"><b>02.03. Indipendenza</b></a></li>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_04_variabili_aleatorie.html" target="_blank"><b>02.04. Variabili Aleatorie</b></a></li>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.05. Densità di Probabilità</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Valor Medio o Atteso</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Distribuzione Uniforme</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Spettro della Densità di Probabilità</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Esempi di Distribuzione Uniforme in CSound e Max</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Distribuzione Lineare</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Distribuzione Triangolare</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Distribuzione Esponenziale</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Distribuzione di Poisson</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Distribuzione Gaussiana</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Mapping</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Autocorrelazione</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Processi con Memoria</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Rumori Frazionari</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Processo Markoviano</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Matrice di Probabilità</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Implementazione del Processo Markoviano</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Estensione della Matrice di Probabilità</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Applicazione del Processo Markoviano ai Parametri di una Composizione</b></a></li>
+
             </ul>
             </p>
         </div>
