--- a/pages/learn/caos.html
+++ b/pages/learn/caos.html
@@ -155,7 +155,8 @@
               <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Implementazione del Processo Markoviano</b></a></li>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Estensione della Matrice di Probabilità</b></a></li>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Applicazione del Processo Markoviano ai Parametri di una Composizione</b></a></li>
-
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Matrici di Markov del Secondo Ordine</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Matrici di Markov Tempo-Varianti</b></a></li>
             </ul>
             </p>
         </div>
