--- a/pages/learn/caos/02_00_caos_stocastico.html
+++ b/pages/learn/caos/02_00_caos_stocastico.html
@@ -107,6 +107,7 @@
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
             <b>Caos Stocastico:</b> descrive e modellizza sistemi i cui parametri variano in base a leggi probabilistiche.
+            Si definisce caos stocastico quando non si riesce a trovare una relazione tra i dati che stanno pervenendo e quelli che devono essere analizzati.
           </p>
         </div>
       </div>
