--- a/pages/learn/caos.html
+++ b/pages/learn/caos.html
@@ -133,32 +133,34 @@
             <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_00_caos_stocastico.html" target="_blank"><b>02. Caos Stocastico</b></a></li>
             <ul>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_01_elementi_di_calcolo_delle_probabilità.html" target="_blank"><b>02.01. Elementi di Calcolo delle Probabilità</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_02_probabilità_condizionata.html" target="_blank"><b>02.02. Probabilità Condizionata</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_03_indipendenza.html" target="_blank"><b>02.03. Indipendenza</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_04_variabili_aleatorie.html" target="_blank"><b>02.04. Variabili Aleatorie</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.05. Densità di Probabilità</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Valor Medio o Atteso</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Distribuzione Uniforme</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Spettro della Densità di Probabilità</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Esempi di Distribuzione Uniforme in CSound e Max</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Distribuzione Lineare</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Distribuzione Triangolare</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Distribuzione Esponenziale</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Distribuzione di Poisson</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Distribuzione Gaussiana</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Mapping</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Autocorrelazione</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Processi con Memoria</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Rumori Frazionari</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Processo Markoviano</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Matrice di Probabilità</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Implementazione del Processo Markoviano</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Estensione della Matrice di Probabilità</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Applicazione del Processo Markoviano ai Parametri di una Composizione</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Matrici di Markov del Secondo Ordine</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Matrici di Markov Tempo-Varianti</b></a></li>
-            </ul>
-            </p>
+              <ul>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_02_probabilità_condizionata.html" target="_blank"><b>02.01.01. Probabilità Condizionata</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_03_indipendenza.html" target="_blank"><b>02.01.02.. Indipendenza</b></a></li>
+                </ul>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_04_variabili_aleatorie.html" target="_blank"><b>02.04. Variabili Aleatorie</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.05. Densità di Probabilità</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Valor Medio o Atteso</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Distribuzione Uniforme</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Spettro della Densità di Probabilità</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Esempi di Distribuzione Uniforme in CSound e Max</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Distribuzione Lineare</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Distribuzione Triangolare</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Distribuzione Esponenziale</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Distribuzione di Poisson</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Distribuzione Gaussiana</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Mapping</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Autocorrelazione</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Processi con Memoria</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Rumori Frazionari</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Processo Markoviano</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Matrice di Probabilità</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Implementazione del Processo Markoviano</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Estensione della Matrice di Probabilità</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Applicazione del Processo Markoviano ai Parametri di una Composizione</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Matrici di Markov del Secondo Ordine</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Matrici di Markov Tempo-Varianti</b></a></li>
+              </ul>
+              </p>
         </div>
       </div>
     </div>
